<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <Button
        android:id="@+id/btn_smart_house"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_shape"
        android:text="@string/smart_house"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_connect_modem_in_main_activity"
        app:layout_constraintEnd_toStartOf="@+id/btn_a_device"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_connect_modem_in_main_activity"
        app:layout_constraintTop_toTopOf="@+id/btn_connect_modem_in_main_activity"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_a_device"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_shape"
        android:text="@string/a_device"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_smart_house"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_smart_house"
        app:layout_constraintTop_toTopOf="@+id/btn_smart_house"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/shian11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <Button
        android:id="@+id/btn_connect_modem_in_main_activity"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_shape"
        android:text="@string/connect_to_modem"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_smart_house"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="244dp" />
</androidx.constraintlayout.widget.ConstraintLayout>